--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="./logo/favicon-32.png" type="image/x-icon">
+    <link rel="icon" href="./icon/favicon-32.png" type="image/x-icon">
     <title>NCDB</title>
   </head>
   <body>
